static/css/main.css
/*-------global/absolutes------*/
body {
	font-size: 13px;
	font-family: Tahoma;
	overflow-y: scroll;
	color: #555;
}

ul, li, form, img {
	border: none;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

a {
	color: #4297D7;
}

.clear { clear: both; }
.inline { display: inline ;}

#wrapper {
	width: 600px;
    margin: 0 auto;
}

#logo {
    z-index: -100;
    background: #ccc;
    padding: 5px;
    border-right: 1px solid #eee;
    position: absolute;
    left: 0;
}
    #logo h1 {
        margin: 0;
        padding: 0;
    }

/*-------search---*/
#search {
    background-color: #f3f3f3;
    font-family: Arial;
	width: 580px;
	display: inline-block;
    padding: 10px;
	clear: left;
	border-bottom: 1px solid #ccc;	
}   
    #search p {
        margin: 10px 0 0 0;
    }
    
    p#from, p#to {
        float: left;
        padding: 0;
        margin: 0;
    }

        #begin_date, #end_date {
            width: 100px;
        }
    
            .ui-datepicker-trigger {
                position: relative;
                vertical-align: middle;
                left: -20px;
            }
    #search_btn {
        width: 80px;
    }

    #options {
        display: none;
    }
        label {
            margin-right: 10px;
        }
        #options_passed, #options_failed {
            margin-left: 0;
        }

/*-----results------*/
#results {
    font-size: 11px;
}
#result_header {
    cursor: default;
}
#result_header h3{
    background: #fff !important; 
}
.date, .time, .accession, .status, .status-fail, .status-pass { display: inline-block; padding: 5px;}
.date { 
    width: 130px;
    text-indent: 15px;
}
.date_unfold {
    background: transparent url(/static/images/unfold.png) no-repeat;
    
}

.date_fold {
    background: transparent url(/static/images/fold.png) no-repeat;
}

.time { width: 170px;}
.accession { width: 90px;}
.status, .status-fail, .status-pass { width: 130px; text-align: right;}
    .status-fail { color: coral;}
    .status-pass { color: green;}
ul#results li h3 { 
    cursor:pointer;
    background: transparent url(/static/images/listgrad.png) repeat;
    font-weight: normal;
    margin: 0;
}
ul#results li.record h3:hover { 
    background: transparent url(/static/images/listgradinverse.png) repeat;
}
ul#results li.record p {
    display: none;
}

/*----pagination------*/
#pagination {
    margin: 10px 0 0 0;
}

.current_page, .page_select {
    margin-right: 8px;
    padding: 5px;
    text-decoration: none;
}
.current_page {
    background-color: #ccc;
    border-bottom: 1px solid #ccc;    
}
.page_select {
    background-color: #eee;
    border-bottom: 1px solid #ccc;
}

